--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.7.4
+APScheduler==3.8.0
 certifi==2021.5.30
 charset-normalizer==2.0.6
 click==8.0.1
@@ -9,6 +10,7 @@ Flask==2.0.1
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-Twilio==0.0.6
 Flask-WTF==0.15.1
 greenlet==1.1.1
 gunicorn==20.1.0
@@ -19,12 +21,14 @@ Mako==1.1.5
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 PyJWT==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.24
 twilio==6.63.2
+tzlocal==2.1
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
